Created controller accounts and modified startup file

--- a/AccountManager/Manager.Web/appsettings.json
+++ b/AccountManager/Manager.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Conexion": "Server=LAPTOP-9LBNL0E3;Database=BDAccountManager;Trusted_Connection=True;ConnectRetryCount=0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
