Added ClientApp dir which it's a vue front project, modified startup.cs file for SPA

--- a/AccountManager/Manager.Web/Manager.Web.csproj
+++ b/AccountManager/Manager.Web/Manager.Web.csproj
@@ -10,11 +10,16 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="VueCliMiddleware" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Manager.Data\Manager.Data.csproj" />
     <ProjectReference Include="..\Manager.Entities\Manager.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\" />
   </ItemGroup>
 
 </Project>
